# git-cleanup

./: Cargo.toml  README.md
src/: args.rs  error.rs  execute.rs  git.rs  git_integration_tests.rs  integration_tests.rs  main.rs  test_support.rs
src/args/: arguments.rs  error.rs  parser.rs  parser_tests.rs
src/commands/: clean.rs  list.rs  mod.rs
src/git/: branch.rs  error.rs  execute.rs  head.rs  line.rs  line_parser.rs  mod.rs  remote_branch.rs  remote_branch_status.rs  repository.rs
