[package]
name = "git-cleanup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
thiserror = "1.0.40"
anyhow = "1.0.71"

[dev-dependencies]
rand = "0.8.5"

[features]
testbin = [] # Enable tests that use external binaries, which are more expensive to run than regular tests

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
strip = true
